tests/toylang/neg/001567_mutation.toylang
program a = { while bool do sleep; } .
